--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -11,6 +11,8 @@ jobs:
       uses: actions/checkout@v4
       with:
         persist-credentials: false
+    - name: Clean build directory
+      run: rm -rf ./build
     - name: Install and Build 📚
       run: |
         npm install -g pnpm
